# anonimchatbot-aiogram3

./: .env.example  Dockerfile  README.md  app.py  docker-compose.yml  loader.py  pyproject.toml  requirements.txt
data/: config.py
handlers/: __init__.py
handlers/callback/: __init__.py  query_handler.py
handlers/chat/: __init__.py  chat_messages_handler.py
handlers/communication/: __init__.py  chatting.py
handlers/states/: __init__.py  custom_states.py
handlers/users/: __init__.py  accounts.py  start.py
keyboards/: __init__.py  keyboard.py
src/: __main__.py  config_reader.py
src/callbacks/: __init__.py  profile_settings.py
src/handlers/: __init__.py  bot_messages.py  chat_commands.py  profile.py  profile_settings.py  search.py  start.py  user_commands.py
src/keyboards/: __init__.py  builders.py  reply.py
src/middlewares/: __init__.py  check_user.py  user_middleware.py
src/utils/: __init__.py  factories.py  funcs.py
utils/: __init__.py  set_bot_commands.py
utils/db_api/: __init__.py  motor_database.py
utils/misc/: logging.py
