[tool.poetry]
name = "anonim-chatbot-aiogram"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.3.0"
motor = "^3.3.2"
pymongo = "^4.6.1"
pydantic-settings = "^2.1.0"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
